--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,20 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.39
-	loader_version=0.11.6
+
+
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.63
+loader_version=0.12.3
+
+#Fabric api
+fabric_version=0.41.0+1.17
+
+
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = com.mango
+	archives_base_name = verticalslabs
 
 # Dependencies
-	fabric_version=0.39.2+1.17
